infrastructure/security/network-policies/01-cifo-frontend-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cifo-frontend-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: cifo-frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow incoming traffic from Ingress Controller
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 3000
  egress:
    # Allow communication to cifo-backend
    - to:
        - podSelector:
            matchLabels:
              app: cifo-backend
      ports:
        - protocol: TCP
          port: 8080
    # Allow CoreDNS resolution
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
